--- a/.github/workflows/rabbitmq_plugin.yml
+++ b/.github/workflows/rabbitmq_plugin.yml
@@ -18,7 +18,7 @@ jobs:
           RABBITMQ_DEFAULT_PASS: testpass
         options: --health-cmd="rabbitmq-diagnostics -q ping" --health-interval=10s --health-timeout=5s --health-retries=3
     
-
+    steps:
     - uses: actions/checkout@v3
 
     - name: Check plugins
