--- a/.github/workflows/rabbitmq_plugin.yml
+++ b/.github/workflows/rabbitmq_plugin.yml
@@ -16,10 +16,10 @@ jobs:
         env:
           RABBITMQ_DEFAULT_USER: testuser
           RABBITMQ_DEFAULT_PASS: testpass
-        options: --health-cmd="rabbitmq-diagnostics -q ping" --health-interval=10s --health-timeout=5s --health-retries=3
+        options: --name=mq --health-cmd="rabbitmq-diagnostics -q ping" --health-interval=10s --health-timeout=5s --health-retries=3
     
     steps:
     - uses: actions/checkout@v3
 
     - name: Check plugins
-      run: docker exec rabbitmq rabbitmq-plugins list
+      run: docker exec mq rabbitmq-plugins list
